feat(product): main

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/playfair-display": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
     "@iconify/react": "^6.0.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -32,6 +33,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
