--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.20.0"
+    "react-native-web": "~0.20.0",
+    "simple-swizzle": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
