--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
+    "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
@@ -35,6 +35,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
