--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
+
   "compilerOptions": {
     "esModuleInterop": true,
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ],  
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
-
