--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo-google-fonts/outfit": "^0.4.3",
     "@expo-google-fonts/playfair-display": "^0.4.1",
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^14.1.0",
     "@iconify/react": "^6.0.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
