--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
   "extends": "expo/tsconfig.base",
-
   "compilerOptions": {
     "jsx": "react",
     "esModuleInterop": true,
     "strict": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx","**/*.js", "**/*.jsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
+  ]
 }
