--- a/app.json
+++ b/app.json
@@ -28,9 +28,18 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font"],
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "83df7a5b-ce0a-447f-a433-d6dafbcedaac"
+      }
     }
   }
 }
