--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
-    "simple-swizzle": "^0.2.2"
+    "simple-swizzle": "^0.2.2",
+    "expo-auth-session": "~6.2.1",
+    "expo-crypto": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
