--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
+    "expo-auth-session": "~6.2.1",
     "expo-av": "~15.1.7",
+    "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
@@ -44,9 +46,7 @@
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
-    "simple-swizzle": "^0.2.2",
-    "expo-auth-session": "~6.2.1",
-    "expo-crypto": "~14.1.5"
+    "simple-swizzle": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
