--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "react-native-web": "~0.20.0",
     "simple-swizzle": "^0.2.2",
     "expo-local-authentication": "~16.0.5",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-image-picker": "~16.1.4",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
