--- a/app.json
+++ b/app.json
@@ -13,6 +13,11 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "navigationBar": {
+      "backgroundColor": "#1a1a1a",
+      "barStyle": "light-content",
+      "visible": "true"
+    },
     "ios": {
       "supportsTablet": true
     },
@@ -30,11 +35,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-font",
-      "expo-web-browser"
-    ],
+    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
     "experiments": {
       "typedRoutes": true
     },
