--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "expo-local-authentication": "~16.0.5",
     "@react-native-async-storage/async-storage": "2.1.2",
     "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.11"
+    "expo-file-system": "~18.1.11",
+    "expo-navigation-bar": "~4.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
