--- a/app.json
+++ b/app.json
@@ -1,16 +1,15 @@
 {
   "expo": {
-    "name": "meu-primeiro-app",
+    "name": "HarmoniX",
     "slug": "meu-primeiro-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "meuprimeiroapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
+      "image": "./assets/images/logo-inicio.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "navigationBar": {
@@ -24,7 +23,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "backgroundColorDark": "#000000"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
