--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^14.1.0",
     "@iconify/react": "^6.0.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.6",
@@ -25,9 +26,13 @@
     "expo-auth-session": "~6.2.1",
     "expo-av": "~15.1.7",
     "expo-crypto": "~14.1.5",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-navigation-bar": "~4.2.8",
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
@@ -47,12 +52,7 @@
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
-    "simple-swizzle": "^0.2.2",
-    "expo-local-authentication": "~16.0.5",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.11",
-    "expo-navigation-bar": "~4.2.8"
+    "simple-swizzle": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
